--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -3,9 +3,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 15px 30px;
   font-size: 14px;
   height: 30px;
+}
+.navbar-logo {
+  margin-left: 10px;
 }
 
 .navbar-button-container {
@@ -21,4 +24,10 @@
   color: white;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.navbar-greeting {
+  font-size: 16px;
+  margin-top: 5px;
+  display:block;
 }
