--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,19 @@
   </head>
 
   <body>
+
     <% if logged_in? %>
       <script type="text/javascript">
           window.currentUser =
             <%= render("api/users/user.json.jbuilder", user: current_user).html_safe %>
       </script>
     <% end %>
+
+    <script type="text/javascript">
+      window.images = {
+        table42Logo: "<%= image_path("logo.png") %>",
+      }
+    </script>
 
     <%= yield %>
   </body>
