--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -4,9 +4,79 @@
   background-color: #fff;
 }
 
+.session-form-header {
+  padding: 30px 30px 0px 30px;
+}
+
+.close-button {
+  font-size: 24px;
+  float: right;
+  color: #aaa;
+  margin-top: 5px;
+  margin-right: 12px;
+}
+
+.close-button:hover {
+  color: black;
+}
+
+.session-form-header > h3 {
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
 .session-form {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 20px 0 30px 30px;
+  padding: 10px 30px 10px 30px;
+}
+
+.session-form-input, .session-submit {
+  height: 46px;
+  line-height: 46px;
+  border: 1px solid #eee;
+  border-radius: 3px;
+  font-size: 14px;
+  margin-bottom: 15px;
+  padding: 0px 10px;
+}
+
+.session-form-input:focus {
+  border-radius: 0;
+  border: 1px solid #aaa;
+}
+
+.session-submit {
+  color: white;
+  background: #da3743;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 17px;
+  border: .5px solid #eee;
+}
+
+.session-submit:hover {
+  background: #c2242e;
+}
+
+.switch-form-link {
+  padding: 0px 30px 30px 30px;
+  text-align: center;
+}
+
+.switch-form-link > button {
+  margin-left: 5px;
+  color: #237b98;
+  font-weight: 550;
+}
+
+.switch-form-link > button:hover {
+  text-decoration: underline;
+}
+
+.session-error-message {
+  color: #c70002;
 }
