--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -56,10 +56,20 @@
   text-align: center;
   font-size: 17px;
   border: .5px solid #eee;
+  margin-bottom: 10px;
 }
 
 .session-submit:hover {
   background: #c2242e;
+}
+
+.demo-submit {
+  background: #237b98;
+  border:0.2px solid #1c627a;
+}
+
+.demo-submit:hover {
+  background: #1c657d;
 }
 
 .switch-form-link {
