create restaurant search bar, update restaurant controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <script type="text/javascript">
       window.images = {
         table42Logo: "<%= image_path("logo.png") %>",
+        searchGlass: "<%= image_path("search_glass.png") %>"
       }
     </script>
 
