--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -48,7 +48,7 @@
 .restaurant-search-input {
   width: 65%;
   height: 20px;
-  border: 1px solid #A6A6A6;
+  border: 1px solid #ccc;
   border-radius: 1.5px;
   font-size: 14px;
   padding: 10px 15px;
@@ -56,9 +56,22 @@
 
 .restaurant-search-input:focus {
   border-radius: 0;
-  border: 1px solid #666666;
+  border: 1px solid #aaa;
 }
 
+.restaurant-search-submit {
+  background: #da3743;
+  height: 42px;
+  // border-radius: 3px;
+  padding: 4px 12px;
+  color: white;
+  border: 1px 1px 1px 0 solid #eee;
+  box-sizing: border-box;
+}
+
+.restaurant-search-submit:hover {
+  background: #c2242e;
+}
 
 .restaurant-search-submit > img {
   height: 40px;
