--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,5 +1,5 @@
 .navbar-container {
-  background: #F5F5F5;
+  // background: #f7f7f7;
   display: flex;
   justify-content: space-between;
   align-items: center;
