style search errors

--- a/app/assets/stylesheets/components/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_index.scss
@@ -22,3 +22,13 @@
 .restaurant-search-bar-index-view > button {
   height: 32px;
 }
+
+.search-error-container {
+  padding: 50px;
+}
+
+.search-error-text {
+  margin: auto;
+  text-align: center;
+  color: #c70002;
+}
