--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
       window.images = {
         table42Logo: "<%= image_path("logo.png") %>",
         searchGlass: "<%= image_path("search_glass.png") %>",
-        homeBackground: "<%= image_path("home_bg.jpg") %>"
+        homeBackground: "<%= image_path("home_bg.jpg") %>",
+        dummyPhoto: "<%= image_path("steakhouse.jpg") %>",
       }
     </script>
 
