--- a/app/assets/stylesheets/components/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_index.scss
@@ -1,3 +1,9 @@
+.index-page-main {
+  padding: 30px 0px;
+  display: flex;
+  justify-content: space-around;
+}
+
 .restaurant-search-container-index-view {
   background: #f2f2f2;
   border: .5px solid #ccc;
@@ -24,11 +30,51 @@
 }
 
 .search-error-container {
-  padding: 50px;
+  width: 800px;
 }
 
 .search-error-text {
-  margin: auto;
-  text-align: center;
+  padding-left: 100px;
+  // margin: auto;
+  // text-align: center;
   color: #c70002;
+}
+
+.search-results-container {
+  width: 800px;
+}
+
+.search-result {
+  border-bottom: .5px solid #ccc;
+  padding-top: 15px;
+  // padding top should match the margin bottom on the reservations button section
+}
+
+.search-result:first-of-type {
+  padding-top: 0;
+}
+
+.search-result-restaurant {
+  padding-left: 60px;
+}
+
+.restaurant-icon {
+  float: left;
+  height: 100px;
+  width: 100px;
+}
+
+
+
+
+
+.index-page-main >ul {
+  border: 1px solid black;
+}
+.reservation-buttons-section {
+  margin: 15px 0;
+
+  button {
+    margin-left: 40px;
+  }
 }
