create and style footer

--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -77,3 +77,50 @@
   height: 40px;
   width: 40px;
 }
+
+.site-footer {
+  height: 150px;
+  width: 100%;
+  background: #333;
+  border-top: 1px solid rgba(0,0,0,.12);
+  display: flex;
+  align-items: center;
+}
+
+.site-footer-container {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+
+  i {
+    color: #acacac;
+    width: 20px;
+  }
+}
+
+.site-footer-blurb {
+  width: 400px;
+  display: flex;
+  align-items: center;
+
+  p {
+    color: #acacac;
+  }
+}
+
+.site-footer-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  li {
+    margin: 5px 0;
+  }
+
+  span {
+    color: #acacac;
+    margin-left: 5px;
+  }
+}
