--- a/app/assets/stylesheets/components/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_index.scss
@@ -8,9 +8,10 @@
 
 .restaurant-search-container-index-view {
   background: #f2f2f2;
-  border: .5px solid #ccc;
+  border-top: .5px solid #ccc;
+  border-bottom: .5px solid #ccc;
   width: 100%;
-  padding: 5px;
+  padding: 5px 0;
 }
 
 .restaurant-search-bar-index-view {
