--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,5 +1,5 @@
 .navbar-container {
-  // background: #f7f7f7;
+  background: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
