--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -29,9 +29,6 @@ img {
   height: auto;
 }
 
-main {
-  display: block;
-}
 
 input[type="password"],
 input[type="email"],
@@ -53,4 +50,8 @@ input[type="submit"] {
     content: "";
     clear: both;
     display: table;
+}
+
+#root {
+  background: #f7f7f7;
 }
