debuggin gilter component

--- a/app/assets/stylesheets/components/featured_cities.scss
+++ b/app/assets/stylesheets/components/featured_cities.scss
@@ -1,11 +1,12 @@
 .featured-city-container {
   margin: 20px auto;
   width: 900px;
-  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2);
+  box-shadow: 0 1px 0 rgba(0,0,0,.2);
+  // box-shadow: 0 2px 1px -1px rgba(0,0,0,.2);
   border-radius: 5px;
   background: #fff;
 }
-// box-shadow: 0 1px 0 rgba(0,0,0,.2);
+
 .featured-city-header {
   margin: auto;
   width: 90%;
