--- a/app/assets/stylesheets/components/home_page.scss
+++ b/app/assets/stylesheets/components/home_page.scss
@@ -24,7 +24,7 @@
   justify-content: center;
   border-radius: 5px;
   padding: 20px;
-  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2);
+  box-shadow: 0 1px 0 rgba(0,0,0,.2);
 }
 
 .search-banner-container {
