more dummy stock photos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,20 @@
         table42Logo: "<%= image_path("logo.png") %>",
         searchGlass: "<%= image_path("search_glass.png") %>",
         homeBackground: "<%= image_path("home_bg.jpg") %>",
-        dummyPhoto: "<%= image_path("steakhouse.jpg") %>",
+        stockPhotos: {
+          "American": "<%= image_path("american.jpg") %>",
+          "Asian": "<%= image_path("chinese.jpg") %>",
+          "Chinese": "<%= image_path("chinese.jpg") %>",
+          "Steakhouse": "<%= image_path("steakhouse.jpg") %>",
+          "French": "<%= image_path("seafood.jpg") %>",
+          "Indian": "<%= image_path("indian.jpg") %>",
+          "Italian": "<%= image_path("italian.jpg") %>",
+          "Mediterranean": "<%= image_path("mediterranean.jpg") %>",
+          "Seafood": "<%= image_path("seafood.jpg") %>",
+          "Sushi": "<%= image_path("sushi.jpg") %>",
+          "Steakhouse":  "<%= image_path("steakhouse.jpg") %>",
+          "Spanish":  "<%= image_path("spanish.jpg") %>",
+        },
         cities: {
           "New York City": "<%= image_path("nyc.jpg") %>",
           "Los Angeles": "<%= image_path("la.jpg") %>",
