start of changing filter from front to backend

--- a/app/assets/stylesheets/components/featured_cities.scss
+++ b/app/assets/stylesheets/components/featured_cities.scss
@@ -1,4 +1,5 @@
 .featured-city-container {
+  position: relative;
   margin: 20px auto;
   width: 900px;
   box-shadow: 0 1px 0 rgba(0,0,0,.2);
@@ -35,29 +36,29 @@
   padding-bottom: 20px;
 }
 
-.new-york-city {
-  background: image-url('nyc.jpg');
-}
-
-.los-angeles {
-  background: image-url('la.jpg');
-}
-
-.san-francisco {
-  background: image-url('sf.jpg');
-}
-
-.seattle {
-  background: image-url('seattle.jpg');
-}
-
-.chicago {
-  background: image-url('chicago.jpg');
-}
-
-.washington-dc {
-  background: image-url('dc.jpg')
-}
+// .new-york-city {
+//   background: image-url('nyc.jpg');
+// }
+//
+// .los-angeles {
+//   background: image-url('la.jpg');
+// }
+//
+// .san-francisco {
+//   background: image-url('sf.jpg');
+// }
+//
+// .seattle {
+//   background: image-url('seattle.jpg');
+// }
+//
+// .chicago {
+//   background: image-url('chicago.jpg');
+// }
+//
+// .washington-dc {
+//   background: image-url('dc.jpg')
+// }
 
 
 .featured-city-item {
@@ -73,5 +74,23 @@
   font-size: 22px;
   margin: auto;
   color: white;
+  text-shadow: 1px 1px 0px #000;
   font-weight: 500;
+  z-index: 5;
+}
+
+
+.featured-city-photos-item {
+  width: 300px;
+  height:150px;
+  opacity: 0.7;
+}
+
+.position-relative-parent {
+  position: relative;
+}
+
+.position-absolute-child {
+  position: absolute;
+  top: 0;
 }
