--- a/app/assets/stylesheets/components/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_index.scss
@@ -107,3 +107,24 @@
     margin-right: 10px;
   }
 }
+
+.loading-container {
+  display: flex;
+  align-items: center;
+  width: 750px;
+}
+
+.loading-spinner {
+  margin: auto;
+  border: 16px solid #ccc; /* Light grey */
+  border-top: 16px solid #237b98; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
