style show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
         table42Logo: "<%= image_path("logo.png") %>",
         searchGlass: "<%= image_path("search_glass.png") %>",
         homeBackground: "<%= image_path("home_bg.jpg") %>",
+        showBackground: "<%= image_path("show_bg.jpeg") %>",
         stockPhotos: {
           "American": "<%= image_path("american.jpg") %>",
           "Asian": "<%= image_path("chinese.jpg") %>",
