--- a/app/assets/stylesheets/components/restaurant_show.scss
+++ b/app/assets/stylesheets/components/restaurant_show.scss
@@ -12,7 +12,7 @@
 
 .show-page-bg-image {
   width: 100%;
-  height: 400px;
+  // height: 400px;
 }
 
 .show-page-and-form {
@@ -23,7 +23,7 @@
 .show-page-main {
   position: relative;
   // min-height: 600px;
-  top: -160px;
+  top: -50px;
   width: 700px;
   margin-left: 100px;
   background: #fff;
