first commit of today

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -42,8 +42,8 @@ button {
 }
 
 select {
-  // -webkit-appearance: none;
-  // -webkit-border-radius: 0px;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px;
 }
 
 button,
