--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -1,7 +1,8 @@
 .session-form-container {
   margin: auto;
   width: 400px;
-  background-color: #fff;
+  background: #fff;
+  border: 1px solid rgba(0,0,0,.12);
 }
 
 .session-form-header {
@@ -89,5 +90,6 @@
 
 .session-error-message {
   color: #c70002;
-  padding: 2px 10px;
+  margin-top: 3px;
+  text-align: center;
 }
