--- a/app/assets/stylesheets/components/reservation_form.scss
+++ b/app/assets/stylesheets/components/reservation_form.scss
@@ -13,7 +13,7 @@
 }
 
 .reservation-header {
-  margin: 0 20px 10px 20px;
+  margin: 0 30px 10px 30px;
   text-align: center;
   font-size: 22px;
   font-weight: 500;
@@ -23,7 +23,7 @@
 }
 
 .reservation-form {
-  padding: 11px 20px;
+  padding: 11px 30px 20px 30px;
 
 }
 
@@ -56,6 +56,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+
 
 .date {
   font-size: 12.5px;
