minor css change, add favorite model/migration

--- a/app/assets/stylesheets/components/restaurant_index.scss
+++ b/app/assets/stylesheets/components/restaurant_index.scss
@@ -87,14 +87,13 @@
   margin-top: 8px;
 
   li {
-    color: #666;
+    color: black;
   }
 }
 
 .light-dollar {
   color: #ccc;
 }
-
 
 .other-info {
   margin-top: 17px;
