--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -19,7 +19,7 @@ span, article, footer, time, small {
   font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 }
 
-ul {
+ul, li {
   list-style: none;
 }
 
