--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -6,6 +6,26 @@
   width: 100%;
 }
 
+.profile-overview {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 10px;
+  background: #eee;
+  border: 1px solid rgba(0,0,0,.12);
+
+  h2 {
+    font-size: 20px;
+  }
+}
+
+.profile-links {
+  display: flex;
+}
+
+
+
 #reviews {
   width: 600px;
   margin: 30px auto;
