--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -6,27 +6,68 @@
   width: 100%;
 }
 
+.profile-master {
+  background: #f7f7f7;
+}
+
 .profile-overview {
   position: sticky;
   top: 0;
   display: flex;
   justify-content: space-between;
-  padding: 15px 10px;
-  background: #eee;
+  align-items: center;
+  padding: 15px 30px;
+  background: #f2f2f2;
   border: 1px solid rgba(0,0,0,.12);
 
   h2 {
-    font-size: 20px;
+    font-size: 21px;
+    margin-left: 10px;
   }
 }
 
 .profile-links {
   display: flex;
+
+  p {
+    margin: 0 7px;
+    color: #237b98;
+  }
+
+  p:hover {
+    text-decoration: underline;
+    color: #1c657d;
+  }
+}
+
+.content {
+  width: 700px;
+  margin: 10px auto;
+  padding: 0 20px 15px 20px;
+  background: #fff;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+
+  h2 {
+    color: #237b98;
+    font-size: 22px;
+    padding-top: 13px;
+    margin-bottom: 10px;
+  }
+}
+
+.spacer {
+  height: 60px;
+  background: #f7f7f7;
+}
+
+.reservation-title {
+  font-size: 20px;
+  margin: 10px 0;
+  font-weight: 570;
 }
 
 
-
 #reviews {
-  width: 600px;
-  margin: 30px auto;
+  margin-bottom: 30px;
 }
