--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -61,13 +61,24 @@
   background: #f7f7f7;
 }
 
-.reservation-title {
+.reservation-title, .review-title {
   font-size: 20px;
   margin: 10px 0;
   font-weight: 570;
+
+  span {
+    color: #da3743;
+  }
+
+  span:hover {
+    // text-decoration: underline;
+    color: #c2242e;
+  }
 }
 
-
-#reviews {
-  margin-bottom: 30px;
+#profile-reviews > div {
+  width: 600px;
+  margin: 20px auto;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #ccc;
 }
