--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -42,8 +42,8 @@
 
 .content {
   width: 700px;
-  margin: 10px auto;
-  padding: 0 20px 15px 20px;
+  margin: 2px auto;
+  padding: 0 25px 20px 25px;
   background: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
@@ -51,7 +51,7 @@
   h2 {
     color: #237b98;
     font-size: 23px;
-    padding-top: 13px;
+    padding-top: 20px;
     margin-bottom: 10px;
   }
 }
@@ -67,7 +67,7 @@
 
 .review-title, .past-reservation-title {
   font-size: 21px;
-  margin: 10px 0;
+  margin-top: 10px;
   font-weight: 570;
 
   span {
@@ -77,6 +77,15 @@
   span:hover {
     color: #c2242e;
   }
+}
+
+.review-title {
+  margin-bottom: 10px;
+  margin-left: 20px;
+}
+
+.past-table {
+  margin-bottom: 10px;
 }
 
 .upcoming-reservation-title {
@@ -111,6 +120,25 @@
 
 #profile-reviews {
   margin-bottom: 35px;
+}
+
+.profile-review-item {
+  width: 550px;
+  margin: auto;
+}
+
+.profile-review-ratings {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 30px;
+
+  li {
+    color: #666;
+  }
+}
+
+.profile-review-body {
+  margin: 0 30px;
 }
 
 .null-profile-text {
