--- a/app/assets/stylesheets/components/profile.scss
+++ b/app/assets/stylesheets/components/profile.scss
@@ -65,23 +65,32 @@
   background: #f7f7f7;
 }
 
-.review-title, .past-reservation-title {
+.profile-review-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 0 10px 25px;
+}
+
+.past-reservation-title {
   font-size: 21px;
   margin-top: 10px;
   font-weight: 570;
-
-  span {
-    color: #da3743;
-  }
-
-  span:hover {
-    color: #c2242e;
-  }
 }
 
 .review-title {
-  margin-bottom: 10px;
-  margin-left: 20px;
+  font-size: 21px;
+  font-weight: 570;
+  margin-top:5px;
+
+  span {
+    color: #237b98;
+  }
+
+  span:hover {
+    color: #1c657d;
+    text-decoration: underline;
+  }
 }
 
 .past-table {
@@ -105,6 +114,7 @@
   text-align: center;
   background: #da3743;
   padding: 4px 7px;
+  border: .2px solid #eee;
 }
 
 .delete-reservation-button:hover {
@@ -139,6 +149,23 @@
 
 .profile-review-body {
   margin: 0 30px;
+}
+
+.profile-review-button {
+  margin-left: 20px;
+  color: white;
+  border-radius: 5px;
+  background: #da3743;
+  padding: 4px 7px;
+  border: .2px solid #eee;
+}
+
+.profile-review-button:hover {
+  background: #c2242e;
+}
+
+.profile-review-button:last-of-type {
+  margin-right: 25px;
 }
 
 .null-profile-text {
