add maps to restaurant show page

--- a/app/assets/stylesheets/components/restaurant_show.scss
+++ b/app/assets/stylesheets/components/restaurant_show.scss
@@ -78,3 +78,16 @@
     margin-right: 7px;
   }
 }
+
+#show-map-container {
+  height: 300px;
+  width: 590px;
+}
+
+.map-presentation {
+  height: 300px;
+  width: 590px;
+  margin: 20px auto;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ccc;
+}
