--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Table42</title>
     <%= csrf_meta_tags %>
-
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{ENV["google_api_key"]}" %>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <%= favicon_link_tag image_path("logo.png"), :rel => "icon", :type =>  "image/png" %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
